feat: discord structure and design (wip)

--- a/index.html
+++ b/index.html
@@ -1,91 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Discord</title>
-    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header class="heading">
-        <div class="container1">
-            <div class="logo">
-                <p>logo</p>
+    <header>
+        <section class="headerback">
+            <div>
+                <img src="img 2/logo.svg" alt="logo di Discord">
             </div>
-            <div class="links">
-                <p><a href=""></a>link <a href=""></a>link <a href=""></a>link <a href=""></a>link <a href=""></a>link
-                </p>
+            <ul class="list1">
+                <li class="sublist1"><a href="">Scarica</a></li>
+                <li class="sublist1"><a href="">Perchè Discord</a></li>
+                <li class="sublist1"><a href="">Nitro</a></li>
+                <li class="sublist1"><a href="">Sicurezza</a></li>
+                <li class="sublist1"><a href="">Assistenza</a></li>
+            </ul>
+            <div>
+                <a href="" class="Login">Accedi</a>
             </div>
-            <div class="login">
-                <p>login</p>
-            </div>
-        </div>
+        </section>
+        <section class="hero">
+            <p class="par1"> <strong class="title1"></strongclass>Il tuo posto per parlare</strong><br>
+                Che tu faccia parte di un club scolastico, gruppo di gamer,
+                comunità artistica mondiale,<br> o semplicemente di un piccolo gruppo di amici che vuole passare il
+                tempo assieme,<br>
+                Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            <p><a href="" class="download">&downarrow;Scarica per Mac</a>
+            <a href="" class="browser"> Apri Discord nel tuo browser</a> </p>
+        </section>
     </header>
     <main>
         <section>
+            <div class="container1">
+                <img src="img 2/item1.svg" alt="">
+                <p class="par2"><strong class="title2">Un luogo a invito <br>con tutto lo <br>spazio <br> necessario per
+                        <br>parlare</strong><br>I
+                    server Discord sono organizzati in canali <br>tematici in cui puoi collaborare, condividere o
+                    <br>semplicemente parlare della tua giornata <br>senza intasare una chat di gruppo.
+                </p>
+            </div>
             <div class="container2">
-                <div class="scritte1">
-                </div>
+                <p class="par2"><strong class="title2">Dove trovarsi è <br>facile</strong><br>Mettiti comodo in un
+                    canale vocale quando <br>hai
+                    tempo. Gli amici nel tuo server possono <br>vedere che sei li e unirsi istantaneamente <br>senza
+                    dover chiamare.</p>
+                <img src="img 2/item2.svg" alt="">
             </div>
-
-        </section>
-        </div>
-        <section class="block1">
             <div class="container3">
-                <div class="scritte2">
-                </div>
-                <div class="scritte2-1"></div>
+                <img src="img 2/item3.svg" alt="">
+                <p class="par2"><strong class="title2">Da pochi a un <br>fandom</strong><br>Dai inizio a una community
+                    di qualsiasi <br>dimensione con
+                    strumenti di moderazione e <br>accesso ai membri personalizzabile. <br>Concedi ai membri poteri
+                    speciali, crea <br>canali privati, e molto altro.</p>
             </div>
-            </div>
-        </section>
-        <section class="block2">
             <div class="container4">
-                <div class="scritte3">
-                </div>
-                <div class="scritte3-1"></div>
-            </div>
-            </div>
-        </section>
-        <section class="block1">
-            <div class="container3">
-                <div class="scritte2">
-                </div>
-                <div class="scritte2-1"></div>
-            </div>
-            </div>
-        </section>
-        <section>
-            <div class="container5">
-                <div class="scritte4">
+                <p class="par2"><strong class="title2">Tecnologia affidabile per tenersi in contatto</strong> <br>Video
+                    e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
+                    video, guarda <br>gli amici giocare in streaming, o riunitevi in una sessione di disegno con la
+                    condivisione schermo.</p>
+                <img src="img 2/item4-big.svg" alt="">
+                <div>
+                    <p><strong class="par3">Pronto a iniziare la tua avventura?</strong></p>
+                    <a href="" class="download2"><strong>&downarrow;Scarica per Mac</strong></a>
                 </div>
             </div>
         </section>
-        <section>
-            <div class="container6">
-                <div class="scritte5">
-                    <div class="scritte5-1"></div>
-                    <div class="scritte5-2"></div>
-                    <div class="scritte5-2"></div>
-                    <div class="scritte5-2"></div>
-                    <div class="scritte5-2"></div>
-                </div>
-            </div>
-        </section>
+
     </main>
+
     <footer>
-        <section class="container7">
-            <div class="footer">
-                <div class="button">
-                    <p>Logo</p>
-                </div>
-                <div class="button2">
-                    <p>Bottone</p>
-                </div>
-            </div>
-        </section>
+
     </footer>
+
 </body>
 
 </html>
