refactoring: star  adjustment

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     condivisione schermo.</p>
                 <img src="img-2/item4-big.svg" alt="">
                 <div>
-                    <img src="img-2/stars.svg" alt="">
+                    <img class="stars" src="img-2/stars.svg" alt="">
                     <p><strong class="par3">Pronto a iniziare la tua avventura?</strong></p>
                     <a href="" class="download2"><strong>&downarrow;Scarica per Mac</strong></a>
                 </div>
